source/files/stylesheets/style.css
/* ... */
div.section+h3 {
  margin-top: 0;
}

span.subheading {
  font-size: 0.85em;
  font-weight: normal;
  color: #888;
  display: block;
}

h3 + span.subheading {
  margin-bottom: 1em;
  margin-top: -0.5em;
}

strong {
  font-weight: bold;
}

em {
  font-style: italic;
}

p {
  margin-bottom: 1em;
  line-height: 1.75em;
}

pre {
  display: inline;
  font-family: Inconsolata, "Courier New", Courier, mono;
}

p:last-child {
  margin-bottom: 0;
}

p.introduction {
  font-size: 1.33em !important;
  line-height: 1.5em;
  font-family: "CallunaRegular", Georgia, "Times New Roman", Times, serif;
  margin-bottom: 0.75em;
}

a {
  color: #c05f1c;
  text-decoration: none;
}


a:hover {
  text-decoration: underline;
}

a[rel="external"] {
  background: url(images/icons/external.png) right center no-repeat;
	padding-right: 20px;
  -webkit-transition: 0.25s all linear;
  -moz-transition: 0.25s all linear;
}

a[rel="external"]:hover {
  background-image: url(images/icons/external_50.png);
}

a.gateway {
  padding: 0.5em 0.75em 0.5em;
  line-height: 1em;
  display: inline-block;
  background: #e3e3e3;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  margin-left: -0.1em;
  margin-right: 0.5em;

}

a.gateway:hover {
  background: #a05617;
  border-color: #a04900;
  color: white;
  text-decoration: none;
}

ul, ol, dl {
  margin-bottom: 1.5em;
}

ol > li {
  position: relative;
  line-height: 1.25em;
}

li {
  line-height: 1.5em;
  margin-bottom: 0.5em;
}

li ul {
  padding-top: 0.25em;
}

blockquote {
  position: relative;
  overflow: hidden;
  padding: 1em 20px;
  border-top: none;
  border-left: 3px solid #e0e0e0;
  margin-top: 0;
  margin-bottom: 0.5em;
}


div.right.quote {
  float: right;
  width: 300px;
  margin-right: -178px;
  margin-left: 18px;
  margin-bottom: 1em;
  overflow: hidden;
  position: relative;
}

div.left.quote {
  float: left;
  width: 240px;
  margin-right: 20px;
  margin-left: -20px;
  margin-bottom: 3.5em;
  overflow: hidden;
  position: relative;
}

blockquote:before {
  content: "“";
  position: absolute;
  top: 0;
  left: -10px;
  font-family:"CallunaRegular", Georgia, "Times New Roman", Times, serif;
  font-size: 12em;
  font-style: normal;
  z-index: 1;
  color: #e0e0e0;
}

blockquote p{
  font-family: "CallunaRegular", Georgia, "Times New Roman", Times, serif;
  font-size: 1.33em;
  font-style: italic;
  line-height: 1.5em;
  background: no-repeat;
  z-index: 2;
  position: relative;
}

cite {
  font-size: 0.85em;
  line-height: 1.4em;
  color: #aaa;
  display: block;
  margin-top: 0.5em;
  padding: 0 22px;
}

cite:before {
  content: "—";
  margin-left: -1.1em;
}

span.ampersand,
span.alternate {
  font-family: "Baskerville", Georgia, "Times New Roman", Times, serif;
  font-style: italic;
  font-weight: normal;
  text-transform: lowercase;
  letter-spacing: 0.1em;
  line-height: inherit;
}

span.ampersand{
  display: inline-block;
  font-size: 1.33em;
  margin-top: -0.33em;
}

code span.ampersand {
    font-family: inherit;
    font-size: inherit;
    font-style: inherit;
    font-weight: inherit;
    letter-spacing: inherit;
    line-height: inherit;
    text-transform: inherit;
    margin-top: inherit;
}

span.alternate {
  letter-spacing: normal;
  position: relative;
  top: -0.1em;
}

sup a:link {
  text-decoration: underline;
}

sup a:visited {
  text-decoration: underline;
}

.footnotes {
  font-size: 0.8em;
  border-top: 1px dotted;
}

.footnotes li:target {
  background: #ff9;
}

/* BASIC BUTTONS */
.btn {
	font-family: "Lucida Grande", Lucida, Verdana, sans-serif;
	position:relative;
	display: inline-block;
	zoom: 1; /* zoom and *display = ie7 hack for display:inline-block */
	*display: inline;
	vertical-align: baseline;
	margin: 0 2px !important;
	outline: none;
	cursor: pointer;
	text-align: center;
	text-decoration: none;
	font-size:1.125em;
	font-weight:bold;
	padding: .5em 2em .55em;
	text-shadow: 0 1px 1px rgba(0,0,0,.3);
	-webkit-border-radius: .5em;
	-moz-border-radius: .5em;
	border-radius: .5em;
	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2);
	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);
	box-shadow: 0 1px 2px rgba(0,0,0,.2);
}

.btn:hover {
	text-decoration: none;
}
.btn:active {
	position: relative;
	top: 1px;
}

/* BUTTON COLORS */
.btn {
	color: #fff;
	border: solid 1px #954712;
	background: #C05F1C;
	background: -webkit-gradient(linear, left top, left bottom, from(#d47b3e), to(#C05F1C));
	background: -moz-linear-gradient(top,  #d47b3e,  #C05F1C);
	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#d47b3e', endColorstr='#C05F1C');
}
.btn:hover {
	border: solid 1px #954712;
	background: #C05F1C;
	background: -webkit-gradient(linear, left top, left bottom, from(#A05617), to(#C05F1C));
	background: -moz-linear-gradient(top,  #A05617,  #C05F1C);
	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#A05617', endColorstr='#C05F1C');
}

.btn-light {
	color: #C05F1C;
	text-shadow: 0 1px 1px rgba(0,0,0,.185);
	border: solid 1px #fae6c0;
	background: #feecc1;
	background: -webkit-gradient(linear, left top, left bottom, from(#fffaed), to(#feecc1));
	background: -moz-linear-gradient(top,  #fffaed,  #feecc1);
	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#fffaed', endColorstr='#feecc1');
}
.btn-light:hover {
	border: solid 1px #fae6c0;
	background: #fff7e3;
	background: -webkit-gradient(linear, left top, left bottom, from(#f9e3bb), to(#fff7e3));
	background: -moz-linear-gradient(top,  #f9e3bb,  #fff7e3);
	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9e3bb', endColorstr='#fff7e3');
}

.btn-dark {
	color: #fff;
	border: solid 1px #9983b0;
	background: #7f6799;
	background: -webkit-gradient(linear, left top, left bottom, from(#c1a7dd), to(#7f6799));
	background: -moz-linear-gradient(top,  #c1a7dd,  #7f6799);
	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#c1a7dd', endColorstr='#7f6799');
}
/* ... */

